--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     <uses-permission android:name="com.android.vending.BILLING" />
 
 
+
     <application
+        android:name=".OslofjordenApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:largeHeap="true"
@@ -18,7 +20,7 @@
         android:theme="@style/AppTheme"
 
         >
-        <uses-library
+               <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
@@ -35,8 +37,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".oslofjordenturguide.usecase.browseMap.MapsActivity"
-
+            android:name=".usecase.browseMap.MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait">
             <intent-filter>
