--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,11 @@ configurations {
 }
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 dependencies {
-    ktlint "com.github.shyiko:ktlint:0.33.0"
+    ktlint "com.pinterest:ktlint:0.33.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
 }
 compileKotlin {
@@ -49,7 +50,7 @@ compileTestKotlin {
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     args "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
     // to generate report in checkstyle format prepend following args:
     // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
@@ -59,6 +60,6 @@ task ktlint(type: JavaExec, group: "verification") {
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     args "-F", "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
 }
